--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,6 +22,12 @@
   --breakpoint-lg: 1200px; 
   --breakpoint-xl: 1320px;
   --breakpoint-2xl: 1920px;
+
+  --animate-spin-slow: spin 16s linear infinite;
+  --animate-appear: smooth 0.6s cubic-bezier(0.83, 0, 0.17, 1);
+  --animate-carousel: carousel 7s linear infinite backwards;
+  --animate-carousel-slow: carousel 20s linear infinite backwards;
+  --animate-carousel-slower: carouselSlow 220s linear infinite backwards;
 }
 
 @media (prefers-color-scheme: dark) {
